--- a/cardapio.html
+++ b/cardapio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/comum.css" />
     <link rel="stylesheet" href="./style/nav.css" />
     <link rel="stylesheet" href="./style/footer.css" />
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/cardapio.css" />
     <!-- Styles -->
 
     <!-- Scripts -->
@@ -56,7 +56,84 @@
         <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
       </div>
     </nav>
-    <main id="main"></main>
+    <main id="main">
+      <div id="container-pesquisa">
+        <p>O que você está procurando?</p>
+        <input type="text" placeholder="Digite o produto desejado" />
+      </div>
+      <div id="home-page">
+        <div id="container-promocao-semana">
+          <p class="container-title">Promoção da semana</p>
+          <div class="texto">Cesta completa NAFEIRA</div>
+          <button>Eu quero</button>
+        </div>
+        <div id="container-sugestoes-chef">
+          <p class="container-title">Sugestões do Chef</p>
+          <div class="container-cards-produtos">
+            <div class="product-card">
+              <div class="product-img"></div>
+              <div class="product-details">
+                <p class="product-name">Repolho</p>
+                <div class="wrapper">
+                  <p class="sub-name">Repolho Crespo</p>
+                  <p class="product-price">R$ 7,90</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img batata"></div>
+              <div class="product-details">
+                <p class="product-name">Batata</p>
+                <div class="wrapper">
+                  <p class="sub-name">Batata inglesa</p>
+                  <p class="product-price">R$ 6,59 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img abobrinha"></div>
+              <div class="product-details">
+                <p class="product-name">Abobrinha</p>
+                <div class="wrapper">
+                  <p class="sub-name">Abobrinha brasileira</p>
+                  <p class="product-price">R$ 4,90 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img cenoura"></div>
+              <div class="product-details">
+                <p class="product-name">Cenoura</p>
+                <div class="wrapper">
+                  <p class="sub-name">Cenoura Nante</p>
+                  <p class="product-price">R$ 2,59 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img milho"></div>
+              <div class="product-details">
+                <p class="product-name">Milho</p>
+                <div class="wrapper">
+                  <p class="sub-name">Milho verde</p>
+                  <p class="product-price">R$ 7,90 kg</p>
+                </div>
+              </div>
+            </div>
+            <div class="product-card">
+              <div class="product-img alho"></div>
+              <div class="product-details">
+                <p class="product-name">Alho</p>
+                <div class="wrapper">
+                  <p class="sub-name">Alho Espanta Vampiro</p>
+                  <p class="product-price">R$ 19,90 kg</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <div id="social-media-container">
         <h2>Redes Sociais</h2>
