--- a/cardapio.html
+++ b/cardapio.html
@@ -63,13 +63,13 @@
       </div>
       <div id="home-page">
         <div id="container-promocao-semana">
-          <p class="container-title">Promoção da semana</p>
-          <div class="texto">Cesta completa NAFEIRA</div>
+       
+          <div id="texto-cardapio">Promoção da semana <br>
+            Cesta completa NAFEIRA</div>
           <button>Eu quero</button>
         </div>
-        <div id="container-sugestoes-chef">
-          <p class="container-title">Produtos</p>
-          <div class="container-cards-produtos">
+        <div class="container-cards-produtos">
+        
             <div class="product-card">
               <div class="product-img"></div>
               <div class="product-details">
