--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/nav.css" />
     <link rel="stylesheet" href="./style/footer.css" />
     <link rel="stylesheet" href="./style/homePage.css" />
+    <link rel="stylesheet" href="./style/modais.css" />
     <!-- Styles -->
 
     <!-- Scripts -->
@@ -181,5 +182,14 @@
         </div>
       </div>
     </footer>
+    <dialog id="create-modal">
+      <div class="container-inputs">
+        <div class="container">
+          <div class="input-container">
+            <label for="input-nome"></label>
+          </div>
+        </div>
+      </div>
+    </dialog>
   </body>
 </html>
