--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav>
-      <img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" />
+     <a href="/index.html"><img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" /></a>
       <ul id="links-list">
         <li class="nav-link">
           <a href="/index.html">Home</a>
@@ -34,7 +34,7 @@
         <li class="nav-link">Carrinho</li>
       </ul>
       <div id="buttons-container">
-        <button id="create-btn" class="nav-btn">Criar conta</button>
+        <button id="create-btn" class="nav-btn botao-secundario">Criar conta</button>
         <button id="entrar-btn" class="nav-btn primary-btn">Entrar</button>
       </div>
       <div id="icons-container">
