--- a/cardapio.html
+++ b/cardapio.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav>
-      <img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" />
+      <a href="/index.html"><img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" /></a>
       <ul id="links-list">
         <li class="nav-link">
           <a href="/index.html">Home</a>
