--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <nav>
-      <img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" />
+      <a href="/index.html"><img src="./imgs/logo-nav.svg" alt="logo naFeira" id="logo-icon" /></a>
       <ul id="links-list">
         <li class="nav-link ativo">
           <a href="./index.html">Home</a>
@@ -143,12 +143,23 @@
           </div>
         </div>
       </div>
-      <div class="reviews-container">
+      <div id="reviews-container">
+        <h2>O que nossos clientes dizem</h2>
+   
         <div class="review-card">
-          <div class="perfil-img"></div>
+          <img src="/imgs/icons/user.svg" alt="" class="perfil-image">
           <div class="review-container">
-            <p class="review-text"></p>
-            <div class="rating-container"></div>
+            <p class="review-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat quod quia et similique cum doloremque.</p>
+            <div class="rating-container"> ⭐⭐⭐⭐⭐
+            </div>
+          </div>
+        </div>
+        <div class="review-card">
+          <img src="/imgs/icons/user.svg" alt="" class="perfil-image">
+          <div class="review-container">
+            <p class="review-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, odio eveniet veniam in commodi repudiandae, nostrum optio sit ipsam nulla numquam fugit ut natus nobis delectus iure quam officiis quas?</p>
+            <div class="rating-container"> ⭐⭐⭐⭐
+            </div>
           </div>
         </div>
       </div>
