--- a/cardapio.html
+++ b/cardapio.html
@@ -34,8 +34,8 @@
         <li class="nav-link">Carrinho</li>
       </ul>
       <div id="buttons-container">
-        <button id="create-btn" class="nav-btn">Criar conta</button>
-        <button id="entrar-btn" class="nav-btn primary-btn">Entrar</button>
+        <button id="create-btn" class="create-btn nav-btn">Criar conta</button>
+        <button id="entrar-btn" class=" entrar-btn nav-btn primary-btn">Entrar</button>
       </div>
       <div id="icons-container">
         <a href="/index.html">
@@ -54,7 +54,7 @@
           <img src="./imgs/icons/pedidos-icon.svg" alt="" class="nav-icon" />
         </a>
 
-        <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
+        <img src="./imgs/icons/user2.svg" alt="" class="nav-icon" id="user-icon" />
       </div>
     </nav>
     <main id="main">
@@ -260,5 +260,21 @@
           </div>
         </dialog>
         <!-- Segundo modal -->
+
+        <!-- Terceiro modal -->
+        <dialog id="mobile-buttons-modal" >
+          <div class="container-buttons-modal">
+            <div id="mobile-login-btn">
+              <img src="/imgs/icons/enter.svg" alt="">
+              <p>Login</p>
+            </div>
+            <div id="createAccount-mobile-btn">
+              <img src="/imgs/icons/addUser.svg" alt="add user icon">
+              <p>Criar conta</p>
+            </div>
+          </div>
+          
+        </dialog>
+        <!-- Terceiro modal -->
   </body>
 </html>
