--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <img src="./imgs/icons/pedidos-icon.svg" alt="" class="nav-icon" />
         </a>
 
-        <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
+        <img src="./imgs/icons/user2.svg" alt="" class="nav-icon" id="user-icon" />
       </div>
     </nav>
     <main id="main">
@@ -290,5 +290,21 @@
       </div>
     </dialog>
     <!-- Segundo modal -->
+    
+        <!-- Terceiro modal -->
+        <dialog id="mobile-buttons-modal" >
+          <div class="container-buttons-modal">
+            <div id="mobile-login-btn">
+              <img src="/imgs/icons/enter.svg" alt="">
+              <p>Login</p>
+            </div>
+            <div id="createAccount-mobile-btn">
+              <img src="/imgs/icons/addUser.svg" alt="add user icon">
+              <p>Criar conta</p>
+            </div>
+          </div>
+          
+        </dialog>
+        <!-- Terceiro modal -->
   </body>
 </html>
