--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
           />
         </a>
 
-        <img src="./imgs/icons/carrinho-icon.svg" alt="" class="nav-icon" />
+        <img src="./imgs/icons/user2.svg" alt="" class="nav-icon" id="user-icon" />
       </div>
     </nav>
     <main id="blog-container">
@@ -244,5 +244,21 @@
           </div>
         </dialog>
         <!-- Segundo modal -->
+        
+        <!-- Terceiro modal -->
+        <dialog id="mobile-buttons-modal" >
+          <div class="container-buttons-modal">
+            <div id="mobile-login-btn">
+              <img src="/imgs/icons/enter.svg" alt="">
+              <p>Login</p>
+            </div>
+            <div id="createAccount-mobile-btn">
+              <img src="/imgs/icons/addUser.svg" alt="add user icon">
+              <p>Criar conta</p>
+            </div>
+          </div>
+          
+        </dialog>
+        <!-- Terceiro modal -->
   </body>
 </html>
